Fix issue with spacing for output CSS

--- a/client/src/css/_sidebar.scss
+++ b/client/src/css/_sidebar.scss
@@ -20,10 +20,10 @@
   }
 
   p {
-    font-size:11px;
+    font-size:12px;
     margin-bottom:10px;
     line-height: 1.3em;
-    font-weight:400;
+    font-weight:500;
 
     &:last-child {
       margin-bottom:0;
