--- a/client/src/css/generators/_flexbox.scss
+++ b/client/src/css/generators/_flexbox.scss
@@ -70,7 +70,7 @@
       border-bottom: none;
       color: #4834d4;
       top: -4px;
-      font-size: 11px;
+      font-size: 12px;
       font-weight: 700;
       text-transform: uppercase;
       white-space: nowrap;
